cluster/core/monitoring-system/kube-prometheus-stack/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kube-controller-manager
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-controller-manager
subsets:
  - addresses:
      - ip: 172.16.70.10
      - ip: 172.16.70.20
      - ip: 172.16.70.30
    ports:
      - name: https-metrics
        port: 10257
        protocol: TCP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-scheduler
subsets:
  - addresses:
      - ip: 172.16.70.10
      - ip: 172.16.70.20
      - ip: 172.16.70.30
    ports:
      - name: https-metrics
        port: 10259
        protocol: TCP
