cluster/core/monitoring-system/kube-prometheus-stack/ingress-CRD.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace:  monitoring-system
  labels:
    app.kubernetes.io/name: prometheus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: "prom.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /prometheus/
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
  tls:
    - hosts:
        - "prom.${SECRET_DOMAIN}"
      secretName: prom-tls
